# Middleware-fast-api

./: main.py  pyproject.toml
controllers/: upload_controller.py
dependecy/: file_config.py  logger.py
middlewares/: middleware.py
routes/: home_route.py  upload_routes.py
