[tool.poetry]
name = "fastapi-file-upload-logging"
version = "0.1.0"
description = "Handling file upload and logging the processes"
authors = ["Chibuikem"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
